# atools

./: .gitmodules  default.nix
abackend/: abackend.cabal
abackend/app/: Main.hs
acalendar/: README.md  acalendar.cabal  reminders
acalendar/app/: Main.hs
acalendar/lib/: DateSpec.hs  Event.hs  File.hs  File.hs-boot  Parser.hs  TimeSpec.hs  Weekday.hs
acalendar/tests/: Main.hs
acalendar/vim/: acalendar.vim
anote/: anote.cabal
anote/app/: Main.hs
anotes/: anotes.cabal
anotes/app/: Main.hs
astorage/: astorage.cabal
astorage/app/: Main.hs
astorage/lib/: Storage.hs
atask/: atask.cabal
atask/app/: Main.hs
atime/: atime.cabal
atime/app/: Duration.hs  Main.hs  TimeRange.hs
