cabal-version:      2.4
name:               acalendar
version:            0.1.0.0
author:             Alexander Foremny
maintainer:         aforemny@posteo.de

common shared
  default-language: Haskell2010
  ghc-options: -Wall -Wno-name-shadowing

library
  import: shared
  exposed-modules:
    DateSpec
    Event
    File
    Parser
    TimeSpec
    Weekday
  build-depends:
    base,
    containers,
    data-default,
    iCalendar,
    mtl,
    parsec,
    text,
    time
  hs-source-dirs: lib

executable acalendar
  import: shared
  main-is: Main.hs
  build-depends:
    acalendar,
    ansi-terminal,
    astorage,
    base,
    bytestring,
    containers,
    data-default,
    DAV,
    directory,
    filepath,
    iCalendar,
    mtl,
    network-uri,
    optparse-applicative,
    split,
    text,
    time,
    xml-conduit,
    xml-hamlet
  hs-source-dirs: app

test-suite test
  import: shared
  type: exitcode-stdio-1.0
  main-is: Main.hs
  build-depends:
    acalendar,
    base,
    hspec,
    parsec,
    QuickCheck,
    text,
    time
  hs-source-dirs: tests
