cabal-version:      2.4
name:               anote
version:            0.1.0.0
author:             Alexander Foremny
maintainer:         aforemny@posteo.de

executable anote
    main-is:          Main.hs
    build-depends:
      astorage,
      base,
      filepath,
      optparse-applicative,
      split
    hs-source-dirs:   app
    default-language: Haskell2010
