cabal-version:      2.4
name:               atime
version:            0.1.0.0
author:             Alexander Foremny
maintainer:         aforemny@posteo.de

executable atime
    main-is:          Main.hs
    other-modules:
      Duration,
      TimeRange
    build-depends:
      astorage,
      base,
      containers,
      directory,
      extra,
      filepath,
      optparse-applicative,
      parsec,
      prettyprinter,
      prettyprinter-ansi-terminal,
      split,
      time
    hs-source-dirs:   app
    default-language: Haskell2010
